--- a/flutter-client/android/app/src/main/res/layout/clock_widget.xml
+++ b/flutter-client/android/app/src/main/res/layout/clock_widget.xml
@@ -1,57 +1,54 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Widget.Android.AppWidget.Container"
     android:id="@+id/widget_root"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    style="@style/Widget.Android.AppWidget.Container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     android:theme="@style/Theme.Android.AppWidgetContainer"
     android:visibility="visible">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/date"
-                style="@style/Widget.Android.AppWidget.InnerView"
-                android:layout_width="wrap_content"
-                android:layout_height="50sp"
-                android:background="@android:color/holo_blue_bright"
-                android:text="!Date!"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/time"
-                style="@style/Widget.Android.AppWidget.InnerView"
-                android:layout_width="wrap_content"
-                android:layout_height="50sp"
-                android:background="@android:color/holo_orange_light"
-                android:text="!Time!"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/refresh"
+        <TextView
+            android:id="@+id/date"
+            style="@style/Widget.Android.AppWidget.InnerView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Refresh"
-            android:textSize="14sp" />
+            android:layout_height="50sp"
+            android:layout_gravity="left"
+            android:background="@android:color/holo_blue_bright"
+            android:text="!Date!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/time"
+            style="@style/Widget.Android.AppWidget.InnerView"
+            android:layout_width="wrap_content"
+            android:layout_height="50sp"
+            android:layout_gravity="right"
+            android:background="@android:color/holo_orange_light"
+            android:text="!Time!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="250dp"
+        android:layout_height="62dp"
+        android:layout_gravity="center"
+        android:text="Refresh"
+        android:textSize="14sp" />
+
+</LinearLayout>
+
 
 
